Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -68,7 +68,7 @@ socials:
   review_sm_icons: false
   facebook_url: https://www.facebook.com/ShawnasHomeTeam
   linkedin_url: https://www.linkedin.com/in/shawnabrookskw
-  gplus_url: https://plus.google.com/u/0/106679774944323753030
+  gplus_url: 
   youtube_url: https://www.youtube.com/channel/UCRgjsxZLUhjbknui6S7kYNg/featured?spfreload=5
   twitter_url: https://twitter.com/shawnabrookskw
   instagram_url:
