moved raving fans videos, testimonials, updated cover photo, added podcast cover image, cleaned post tags

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,10 +1,10 @@
 audit_header: false
 title: Louisville Real Estate Video Blog with Bob Sokoler
 description: 'If you are looking to buy or sell a home, get all the information and the latest updates, tips, and tricks from -- CLIENT BRAND -- - your professional -- MARKET -- Real Estate Agents.'
-show_custom_links: false
+show_custom_links: true
 custom_links:
-  - title:
-    url:
+  - title: Our Raving Fans
+    url: /raving-fans
 
 client:
   name: Bob Sokoler
@@ -22,7 +22,7 @@ client:
   phone2:
   phone2_type:
   email: Bob@WeSellLouisville.com
-  url: http://http//www.weselllouisville.com
+  url: http://www.weselllouisville.com
 
 CTAs:
   first_CTA_text: Home Valuation
@@ -39,10 +39,10 @@ sidebar_CTA:
     CTA_url: http://www.weselllouisville.com/sell/track-your-homes-value/
 
 second_sidebar_CTA:
-  - CTA_image_path2: /img/cta-images/005.jpg
-    CTA_title2: "Looking for a -- MARKET -- Home?"
-    CTA_text2: "Search the entire MLS for your -- MARKET -- home."
-    CTA_link_text2: "Search the MLS"
+  - CTA_image_path2: /img/truck.jpg
+    CTA_title2: "Moving?"
+    CTA_text2: "Buy or sell with The Sokoler and Medley Team and use our moving truck for free."
+    CTA_link_text2: "Use Our Truck"
     CTA_url2: http://www.weselllouisville.com/property-search/search-form/
 
 lender:
@@ -92,7 +92,7 @@ podcast:
 images:
   client_headshot_path: /img/headshot.jpg
   hero_logo_path: /img/logo.png
-  logo_width_number: 80
+  logo_width_number: 100
   hero_text: -- MARKET -- Real Estate Video Blog
   hero_background_hex: '#999'
   hero_image_path: /img/background.jpg
@@ -108,7 +108,7 @@ header_shadow:
   h_shadow: 0px
   w_shadow: 2px
   shadow_spread: 7px
-  shadow_color: rgba(2, 57, 119, .7)
+  shadow_color: rgba(238, 238, 238, .7)
 
 buttons:
   button_radius_number: 0
