--- a/_data/testimonials.yml
+++ b/_data/testimonials.yml
@@ -1,5 +1,20 @@
-show_testimonials_section: false
+show_testimonials_section: true
 testimonial:
-  - quote:
-    name:
+  - quote: Listed our home with the Best. We were pleased with every aspect of listing and sale. Very professional staff and would highly recommend  Bob Sokoler's  team to anyone looking to make a move.
+    name: Karen
+    audio:
+  - quote: Bob Sokoler's company including Amy Hill and Randy Raque always were a very big help in finding me a home.  Amy would send me twenty house and condominium listings three to four days a week, and get me appointments as soon as possible to look at what I was interested in to narrow down my search for   my perfect home.  If there were any questions that I had, they were always answered right away.  I was able to find my perfect home in a little bit over two weeks.   This is why I highly recommend Bob Sokoler's Real Estate team to help you find any excellent house and/or condominium in the Louisvile area.
+    name: Ronald
+    audio:
+  - quote: The Sokoler Medley team did a fantastic job helping us find our dream home. Their network and connections are second to none and their knowledge of the city and housing market helped us discover a beautiful home we otherwise wouldn't have found. I also love that you can use their moving truck for   free. A+ all around!
+    name: Johnny
+    audio:
+  - quote: Bob and his team were GREAT !!!! The tools they used for my listing was awesome and utmately is reason why my house sold !!!! Thanks again Bob to you and your staff.
+    name: Steve
+    audio:
+  - quote: Bob is a man of high integrity.  He truly cares about your well being.  My wife and I are so grateful for Bob's guidance we he sold our home for us.  He prepared us well for the selling process and there were no surprises.
+    name: Richard
+    audio:
+  - quote: Yes Bob was amazing to work with and we had an excepted offer on the condo within 3 days of listing it! We were thrilled and have recommended him to many of our friends. We would love to work with him again when the time comes.
+    name: Jennifer
     audio:
