adding old posts so library is in order

--- a/_config.yml
+++ b/_config.yml
@@ -44,7 +44,8 @@ defaults:
     values:
       layout: "default"
 tags:
-  - Market Update
-  - Real Estate
-  - Home Buyer Tips
-  - Home Seller Tips
+  - Real Estate Market Info
+  - Selling a Home
+  - Buying a Home
+  - Helpful Hints for Homeowners
+  - Lisa's Tips
