--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,23 +1,35 @@
 audit_header: false
 title: The Wicker Homes Group
-description: 'If you are looking to buy or sell a home, get all the information and the latest updates, tips, and tricks from The Wicker Homes Group your professional Northern Virginia Real Estate Agents.'
+description: >-
+  If you are looking to buy or sell a home, get all the information and the
+  latest updates, tips, and tricks from The Wicker Homes Group your professional
+  Northern Virginia Real Estate Agents.
 show_custom_links: true
 custom_links:
-  - title: "Debbie's List"
-    url: 'https://www.yumpu.com/en/document/view/55881214/debbies-list-virginia-contractors-2016-q4'
+  - title: Debbie's List
+    url: >-
+      https://www.yumpu.com/en/document/view/55881214/debbies-list-virginia-contractors-2016-q4
   - title: About
     url: 'https://www.wickerhomesgroup.com/agents/'
   - title: 19-Point Selling System
-    url: 'https://www.yumpu.com/en/document/view/55525349/wicker-homes-group-listing-presentation-2016'
+    url: >-
+      https://www.yumpu.com/en/document/view/55525349/wicker-homes-group-listing-presentation-2016
   - title: Why Sell With Us
     url: 'http://sellwithwhg.com/'
 client:
   name:
   license_number:
-  about_markdown: "At the Wicker Homes Group we are committed to helping families and individuals find a place they love to call home. And we're committed to helping our clients receive top dollar for their homes to grow their wealth through real estate. Let us know how we can help you. Please take advantage of the helpful tools on this website, including our exclusive Loudoun & Fairfax County Home Search. And of course, feel free to call us with any real estate questions."
+  about_markdown: >-
+    At the Wicker Homes Group we are committed to helping families and
+    individuals find a place they love to call home. And we're committed to
+    helping our clients receive top dollar for their homes to grow their wealth
+    through real estate. Let us know how we can help you. Please take advantage
+    of the helpful tools on this website, including our exclusive Loudoun &
+    Fairfax County Home Search. And of course, feel free to call us with any
+    real estate questions.
   market:
   brand: Wicker Homes Group
-  brokerage: Keller Williams Realty
+  brokerage: Keller Williams Realty Dulles
   address: '46169 Westlake Dr. Suite 200<br>Potomac Falls, VA 20165'
   phone: 571-210-4997
   phone_type:
@@ -50,7 +62,12 @@ lender:
   url: 'http://eyegoop.com'
 welcome_box:
   welcome_headline: Join Our -- MARKET -- VIP List
-  welcome_text_markdown: 'Our mission at the Wicker Homes Group is to be your best resource for real estate advice. Whether you are a buyer, seller, or investor, our team of professionals can answer any questions you might have about real estate. Subscribe to this blog to get the latest news on local market trends and receive expert tips for buying or selling a home.'
+  welcome_text_markdown: >-
+    Our mission at the Wicker Homes Group is to be your best resource for real
+    estate advice. Whether you are a buyer, seller, or investor, our team of
+    professionals can answer any questions you might have about real estate.
+    Subscribe to this blog to get the latest news on local market trends and
+    receive expert tips for buying or selling a home.
 socials:
   review_sm_icons: false
   facebook_url: 'https://www.facebook.com/WickerHomesGroup/'
@@ -61,7 +78,8 @@ socials:
   instagram_url:
   pinterest_url:
   zillow_url: 'http://www.zillow.com/profile/Wicker-Homes-Group/'
-  trulia_url: 'http://www.trulia.com/profile/debbie-wicker-broker-ashburn-va-364181/overview'
+  trulia_url: >-
+    http://www.trulia.com/profile/debbie-wicker-broker-ashburn-va-364181/overview
   yelp_url: 'http://www.yelp.com/biz/wicker-homes-group-re-max-ashburn'
   podcast_url:
 podcast:
@@ -69,15 +87,26 @@ podcast:
   categories:
     - Education
   image: /img/podcast.jpg
-  subtitle: 'Learn all the tips, tricks and more for buyers and sellers in the -- MARKET -- Area Real Estate Market'
-  description: 'If you are looking to buy or sell a home, get all the information and the latest updates, tips, and tricks from -- CLIENT BRAND -- - your professional -- MARKET -- Real Estate Agents.'
-  keywords: 'Real Estate for sale, Real Estate agents, top real estate agents, local real estate agents, find a real estate agent, houses for sale in -- MARKET --, home selling tips, home for sale, home buying, home buying process, property finder, property search, property, real estate market, estate agent, realestate, real estate listings, buying a house, homes for sale, mls, home buyer'
+  subtitle: >-
+    Learn all the tips, tricks and more for buyers and sellers in the -- MARKET
+    -- Area Real Estate Market
+  description: >-
+    If you are looking to buy or sell a home, get all the information and the
+    latest updates, tips, and tricks from -- CLIENT BRAND -- - your professional
+    -- MARKET -- Real Estate Agents.
+  keywords: >-
+    Real Estate for sale, Real Estate agents, top real estate agents, local real
+    estate agents, find a real estate agent, houses for sale in -- MARKET --,
+    home selling tips, home for sale, home buying, home buying process, property
+    finder, property search, property, real estate market, estate agent,
+    realestate, real estate listings, buying a house, homes for sale, mls, home
+    buyer
   author: '-- CLIENT NAME --'
 images:
   client_headshot_path: /img/headshot.png
   hero_logo_path: /uploads/gold-logo-1.png
   logo_width_number: 40
-  hero_text: 'Northern Virginia<br>Real Estate Blog'
+  hero_text: Northern Virginia<br>Real Estate Blog
   hero_background_hex: '#191919'
   hero_image_path: /uploads/stonetowerwinerywickersbackgroundcropped.jpg
   post_cover: /img/cover.jpg
