--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -3,6 +3,8 @@ title: -- CLIENT BRAND --
 description: 'If you are looking to buy or sell a home, get all the information and the latest updates, tips, and tricks from -- CLIENT BRAND -- - your professional -- MARKET -- Real Estate Agents.'
 show_custom_links: true
 custom_links:
+  -title: Client Testimonials
+     url: /client-testimonials
   - title: Join Our Team
     url: 'http://unbouncepages.com/join-canovo/'
 
