Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -76,7 +76,7 @@ socials:
   zillow_url: http://www.zillow.com/profile/Jody-Donaldson/
   trulia_url: http://www.trulia.com/profile/jody-d-donaldson-agent-chantilly-va-10873811/overview
   yelp_url: http://www.yelp.com/biz/jody-donaldson-century-21-new-millennium-chantilly
-  podcast_url:
+  podcast_url: https://itunes.apple.com/us/podcast/northeren-virginia-real-estate-podcast-jody-donaldson/id1269264138?mt=2
 
 podcast:
   title: Northeren Virginia Real Estate Podcast with Jody Donaldson
