Updated '_data/testimonials.yml' via CloudCannon

--- a/_data/testimonials.yml
+++ b/_data/testimonials.yml
@@ -9,6 +9,15 @@ testimonial:
       and kind person.
     name: 'Corey & Danielle / West Fargo, ND (Buyer)'
     audio:
+  - quote: >-
+      We worked with Jeremy in 2011 to help us find our next home. He really
+      listened to what we were looking for and would also get weekly listings of
+      houses that fit exactly what we were looking for. He was so helpful with
+      the whole process and was always quick to answer any questions that came
+      up along the way. We would strongly recommend Jeremy to anybody looking to
+      buy or sell a home. He is an honest realtor whose integrity is unmatched.
+    name: 'Kristin & Mitchell / Fargo, ND (Buyer)'
+    audio:
   - quote:
     name:
     audio:
