Updated '_data/testimonials.yml' via CloudCannon

--- a/_data/testimonials.yml
+++ b/_data/testimonials.yml
@@ -18,6 +18,47 @@ testimonial:
       buy or sell a home. He is an honest realtor whose integrity is unmatched.
     name: 'Kristin & Mitchell / Fargo, ND (Buyer)'
     audio:
-  - quote:
-    name:
+  - quote: >-
+      Jeremy made finding our first home a memorable experience that we will
+      never forget.  Jeremy put countless hours into finding homes that we could
+      afford and that we would want to look at.  Never once did he offer to show
+      us a home that was too far out of our budget that would put us in a bind
+      if we were to purchase the home.  His hours were extremely flexible around
+      our schedule even to the point he would be willing to cancel plans to show
+      us a house.  Even signing papers and negotiations with the seller came
+      without any hiccups.  My wife and I would use Jeremy as our realtor again,
+      and would offer his card to any family and friends in need of a realtor.
+    name: 'Tony & Chelsie / Moorhead, MN (Buyer)'
+    audio:
+  - quote: >-
+      I would strongly recommend the realty services of Jeremy Qualley for any
+      seller or buyer. Today we closed on our home after setting out previewing
+      our very first property 11 months ago. The home search timespan was not
+      dictated by Jeremy’s inability to find properties to our liking, but
+      rather the ongoing search to find the right home for us, which was our
+      goal and Jeremy’s all along. The patience shown by Jeremy and his actions
+      of putting our best interests first while searching to find our home was
+      truly one of the best customer service efforts I have encountered. Jeremy
+      was more than willing on multiple occasions to work with our busy
+      schedules and preview homes on nights, weekends, and lunches. He made the
+      home buying experience enjoyable and effortless on our behalf. With weekly
+      mailings of homes within our wanted criteria, we were able to locate our
+      new home. Although, I am excited to work with Jeremy again in the future,
+      I know it won’t be in the near future as he found us the perfect home for
+      years to come.
+    name: 'Mark & Jenna / Fargo, ND (Buyer)'
+    audio:
+  - quote: >-
+      I highly recommend Jeremy Qualley as a Realtor.  Jeremy represented us in
+      the sale of our home in Fargo, North Dakota this Fall.  Having been a
+      realtor in the past, I can’t think of anyone more qualified in Fargo to
+      represent a client either as a listing agent or a buyers agent.  Jeremy
+      has the pulse on the market, and his professional ability to market our
+      home gave us much needed relief as we were selling from our home in
+      Tucson, and we were not able to be there for the listing, and the final
+      closing.  I put my full trust in Jeremy, and was not at all disappointed
+      in his creative marketing skills which led my home to sell quickly and
+      efficiently.  Jeremy and SK Realty went above and beyond the normal
+      realtor responsibilities.  That made all the difference!
+    name: 'John & Deborah / Fargo, ND (Seller)'
     audio:
