Updated '_data/testimonials.yml' via CloudCannon

--- a/_data/testimonials.yml
+++ b/_data/testimonials.yml
@@ -62,3 +62,13 @@ testimonial:
       realtor responsibilities.  That made all the difference!
     name: 'John & Deborah / Fargo, ND (Seller)'
     audio:
+  - quote: >-
+      Working with Jeremy Qualley was an absolute pleasure.  He was fantastic at
+      understanding the aspects we were dealing with as first-time buyers.  It
+      was nice have someone who helped us with every step, and was always very
+      prompt with information and updates throughout the process.  It was makes
+      the whole experience so much less stressful to have someone who can
+      explain everything to you in a professional and yet affable way.  We
+      highly recommend Jeremy, and will be doing so to everyone we know!
+    name: 'Marcus & Heather / Hillsboro, ND (Buyer)'
+    audio:
