--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -68,7 +68,7 @@ socials:
   review_sm_icons: false
   facebook_url: https://www.facebook.com/eugenesellerRE
   linkedin_url: https://www.linkedin.com/in/joshuacooley/
-  gplus_url:
+  gplus_url: https://plus.google.com/b/112927395123231121144/+EugeneRE
   youtube_url: https://www.youtube.com/user/EugeneHomes
   twitter_url: https://twitter.com/EugeneSeller
   instagram_url:
