Updated '_data/testimonials.yml' via CloudCannon

--- a/_data/testimonials.yml
+++ b/_data/testimonials.yml
@@ -72,3 +72,193 @@ testimonial:
       highly recommend Jeremy, and will be doing so to everyone we know!
     name: 'Marcus & Heather / Hillsboro, ND (Buyer)'
     audio:
+  - quote: >-
+      Jeremy is amazing! He has insight, patience, and excellent people skills.
+      His work gets results!
+    name: '— Peggy / Moorhead, MN (Seller)'
+    audio:
+  - quote: >-
+      Love working with Jeremy, responded fast and professionally, friendly and
+      courteous. Am definitely going to use again to sell and buy a new house
+      when the time comes. I would recommend him to anyone in the market!
+    name: '— Chris & Robyn / West Fargo, ND (Buyer)'
+    audio:
+  - quote: >-
+      Jeremy guided us through the home buying maze and answered all our
+      questions as soon as possible. He was excellent dealing with the
+      homeowner’s agent and looking out for our best interest. He’s professional
+      but easy going and we would highly recommend Jeremy.
+    name: '— Larry & Kathy / Fargo, ND (Buyer)'
+    audio:
+  - quote: >-
+      Jeremy helped us look for a house for 3 months. He always worked around
+      our schedules and always gave us a heads up on houses that went on the
+      market that day. After a couple houses that we first walked through, he
+      knew what we were looking for and where we would like to live. He also
+      would look into all the questions we had about the houses that we liked.
+      When we found the house that we have now, Jeremy had a list of:
+      inspectors, the places where our utility’s will be from, ect. He helped
+      with everything and was there for all our questions. He is a easy going,
+      hard working agent! I recommend Jeremy to anyone looking for their home!
+    name: '— Kristen / West Fargo, ND (Buyer)'
+    audio:
+  - quote: >-
+      Jeremy helped us sell our first home. His knowledge of the process and
+      market made our experience a pleasant one. A good mix of marketing
+      strategies were employed and Jeremy relied on his knowledge, experience,
+      and professional network to help us meet our goal of selling within a
+      reasonable time frame and to our satisfaction.
+    name: '— Jose & Katie / Fargo, ND (Seller)'
+    audio:
+  - quote: >-
+      Jeremy was great to work with! He was prompt and efficient in helping me
+      buy my home – which I love so much. He was able to answer all my questions
+      and was very easy to talk to. The experience was that much better for
+      having Jeremy as my realtor! I definitely recommend Jeremy and would use
+      him again in the future for any real estate needs I may have.
+    name: '— Teresa / Fargo, ND (Buyer)'
+    audio:
+  - quote: >-
+      Jeremy help us by our first home. He was willing to help us at all hours
+      of the day, and was very responsive when we needed him.
+    name: '— Luke & Kristin / West Fargo, ND (Buyer)'
+    audio:
+  - quote: >-
+      Jeremy was always quick to respond to any questions we had. He had an open
+      house right away and our pictures looked great on the internet. He knew we
+      wanted to be out by a certain date and our house sold in time and at the
+      price we were looking for. He was very personable and easy to work with.
+      We would use him again if we were going to purchase in the F-M area.
+    name: '— Brian & Tovia / Fargo, ND (Seller)'
+    audio:
+  - quote: >-
+      Jeremy was absolutely WONDERFUL to work with! He was very honest and
+      up-front about every aspect in selling our home. He was very gracious to
+      explain any part of the process that we didn’t understand and offered
+      honest input and advice whenever a “snag” occurred. I would recommend him
+      to anyone looking to buy or sell a home! I wish he could be our agent when
+      we buy our next home! (we moved out of state, otherwise he would be!)
+    name: '— Josh & Amanda / West Fargo, ND (Seller)'
+    audio:
+  - quote: >-
+      Jeremy was wonderful to work with. He is very professional and greatly
+      exceeded my expectations as a realtor! I definitely would recommend him to
+      anyone I know who is looking to buy or sell a home.
+    name: '— Susan / Fargo, ND (Seller)'
+    audio:
+  - quote: >-
+      I was a first time buyers, and I was guided the whole way through this
+      crazy process with such care and professionalism. I may have been small
+      fries compared to other clients, but he always made me feel like I was his
+      main concern. He was extremely patient with all of my requests. Jeremy
+      understood the importance of getting me my first house, and followed up on
+      everything possible to ensure that I would be able to buy my new home. He
+      made the process seem like a piece of cake. He kept me informed, educated
+      me on the process, and continues to follow up with me. I was lucky enough
+      to work with Jeremy, and would highly recommend him to anybody.
+    name: '— Chris / Fargo, ND (Buyer)'
+    audio:
+  - quote: >-
+      Jeremy was great to work with. He knew just what we needed to do to our
+      old house to make for a quick sale and helped us find the perfect new
+      house that was within our budget thanks to getting the best price on our
+      old home!
+    name: '— Johnnie & Heidi / Fargo, ND (Seller & Buyer)'
+    audio:
+  - quote: >-
+      My wife and I were moving back from Iowa and looking for a new place in
+      the Fargo/Moorhead area to call our home. We knew that there were going to
+      be a lot of big changes coming up in our lives and really didn’t know
+      where to start with looking for a house. I found out that Jeremy was a
+      relator in the area and figured he would be a great person to speak with
+      since I’ve known him for many years. As first time home buyers we were
+      thinking we could get some questions answered and get some good ideas. We
+      were completely blown away with the first meeting we had with Jeremy. He
+      really took the time to learn more about us. Not just what we could
+      afford, but what we were looking for in our “Dream House”. We went over
+      location, size, year, model, everything that we were looking for in a
+      house. Then Jeremy took us through a “house reality check” that really
+      opened our eyes to what would work best for us.  After this meeting Jeremy
+      took what we had spoke about and began sending us emails with different
+      houses that were listed on the market. We were able to view these homes
+      without having to leave ours. When we came across something we liked we
+      just let Jeremy know and we would go take a look at it. With the way the
+      market was going in the Fargo/Moorhead area, houses were going faster than
+      Jeremy could email us.  We were getting a little worried and not sure if
+      we were going to find something just right for us. We told Jeremy about
+      our concerns and that’s when he really got down to business. He put us
+      upon his shoulders at this point and within no time he was showing us the
+      house that we eventually bought. We had to go through a couple
+      negotiations, and Jeremy handled the situation perfectly while keeping us
+      calm and informed during the entire process.  We can’t thank him enough
+      for the hard work that he put in, we weren’t always the easiest to work
+      with, but from the beginning he told us he would find us our “Dream House”
+      and that’s exactly what he did.
+    name: '— Kyle & Steph / Fargo, ND (Buyer)'
+    audio:
+  - quote: >-
+      Jeremy is absolutely the best realtor and business professional out there.
+      So unbelievably professional and very knowledgeable. He has so many up to
+      date tools that he uses so your house is literally available to everyone
+      immediately. I would never work with anyone else nor recommend anyone
+      else. You are making a huge mistake if you go with anyone else.
+    name: '— Dan & Kelsey / West Fargo, ND (Seller)'
+    audio:
+  - quote: >-
+      Jeremy has been an absolute pleasure working with to sell our home and
+      help us with our build. I would strongly recommend him for selling and
+      buying your next place! Will definitely use him and his agency again!
+    name: '— Matt & Jessica / West Fargo, ND (Buyer/Seller)'
+    audio:
+  - quote: >-
+      Great help in finding us the house we wanted! I work a job with odd hours
+      that did not stop him from showing late at night! Nice relaxing company to
+      work with!
+    name: — Michael & Marqelle / Mapleton (Buyer)
+    audio:
+  - quote: >-
+      We were very pleased with Jeremy in the whole process of buying our home.
+      Everything went smoothly, he got back to us right away with any questions
+      we had and made sure we were satisfied with everything. He has a great
+      personality and very friendly. We definitely would use him again. We have
+      gone with SK Realty for many many years and have always been pleased.
+      Again they didn’t let us down!! Thumbs up!
+    name: — Jason & Susan / Fargo (Buyer)
+    audio:
+  - quote: >-
+      Jeremy is an absolute treasure. He always responded promptly to my
+      communications and kept in constant contact. Jeremy never made me feel
+      silly for asking dumb questions. He is trustworthy, concerned and kind.
+      You won’t find a better realtor in the area.
+    name: — Tamera / Fargo (Buyer)
+    audio:
+  - quote: >-
+      Jeremy is an awesome realtor! He always works towards ensuring that your
+      transition is smooth and easy. Jeremy has sold 2 homes for us and each one
+      has sold in 1 day above asking and offers that blew me away. To this day
+      my son still talks about Jeremy and we feel he is a great family friend we
+      will always recommend him to anyone we know. In looking back I had
+      accepted a new job in Arizona and Jeremy got off of a plane from in
+      Minneapolis and drove straight to our house in Fargo so that we could get
+      our home on last minute. Every time we have worked with Jeremy he went
+      above and beyond expectations to ensure that your home is sold and listed
+      right away.
+    name: — Jake & Megan / West Fargo (Seller)
+    audio:
+  - quote: >-
+      Jeremy did a great job in helping us find a good home that fits what we
+      need. I would recommend him and SK Realty Inc. to anyone. He wasn’t pushy
+      and was always willing to let us think about things.
+    name: — Joe & Melissa / West Fargo (Buyer)
+    audio:
+  - quote: >-
+      Jeremy Qualley was a pleasure to work with from start to finish, he always
+      made us feel like we were his highest priority. In the last five years I
+      have bought and sold a few houses in the area, using other realtors and I
+      was always left disappointed. It is not very often that you get to work
+      with someone that takes pride in what they do. If you are looking for a
+      realtor that will go above and beyond to make sure you are well taken care
+      of and your best interest is at hand, you couldn’t ask for a better
+      realtor than Jeremy Qualley!
+    name: — Joe & April / Hillsboro (Seller)
+    audio:
