Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,6 +1,6 @@
 audit_header: false
 title: -- CLIENT BRAND --
-description: 'Our mission at -- CLIENT BRAND -- is to be your best resource for -- MARKET -- real estate advice. Whether you are a buyer, seller, or investor, our team of professionals can answer any questions you might have about real estate. If you are looking to buy or sell a home, you can get all the information and the latest updates, tips, and tricks from The -- CLIENT BRAND --, your professional -- MARKET -- Real Estate Agents.'
+description: 'If you are looking to buy or sell a home, get all the information and the latest updates, tips, and tricks from -- CLIENT BRAND -- - your professional -- MARKET -- Real Estate Agents.'
 show_custom_links: false
 custom_links:
   - title:
@@ -11,10 +11,10 @@ client:
   license_number:
   about_markdown: |
     Joe DeSane, born and raised in Palm Beach County, he understands the area and knows how to get top dollar for his clients. When working with Joe you can expect him and his team to negotiate you top dollar for your property. Their negotiation skills guide every buyer and seller through real estate obstacles leading them happily to the closing table. Joe and his team take a more aggressive approach when it comes to buying and selling real estate in today’s forever changing market. Joe possesses the ability to empower agents and create a collaborative, cooperative team. Continuously stressing the importance of building and maintaining client relationships, he provides agents with market knowledge, technology, and resources they require to effectively meet their clients’ needs. As a team in 2015, DeSane Realty Group sold over 140 homes to Palm Beach County Residents. In 2016, Joe’s team plans to assist over 200 buyers & sellers with their home needs.
-  market:
+  market: Wellington
   brand: DeSane & Associates
   brokerage: Keller Williams Realty
-  address: 12008 South Shore Blvd Suite 201<br>Wellington, FL 33414
+  address: 12008 South Shore Blvd Suite 201. Wellington, FL 33414
   phone: 561-320-2085
   phone_type:
   phone2:
@@ -70,7 +70,7 @@ socials:
   linkedin_url: https://www.linkedin.com/in/joe-desane-2b946793/
   gplus_url:
   youtube_url: http://www.youtube.com/channel/UCVFxMZ5y_mhaJHX_zvcC5PQ
-  twitter_url: https://twitter.com/DeSaneandAssoc
+  twitter_url: https://twitter.com/DESANANDASSOC
   instagram_url:
   pinterest_url:
   zillow_url: https://www.zillow.com/profile/DeSane_And_Assoc./
